--- a/src/components/styles/globals.css
+++ b/src/components/styles/globals.css
@@ -1,6 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700;800&display=swap');
+
+
 
 /* Smooth scrolling */
 html {
@@ -10,7 +13,7 @@ html {
 /* Better text rendering */
 body {
   @apply antialiased text-gray-800;
-  font-family: "Inter", "satoshi", system-ui, sans-serif;
+  font-family: "Inter", "satoshi","Manrope", system-ui, sans-serif;
 }
 
 .heading-font {
